update bookmark appearance

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h3><i class="fa fa-bookmark-o" aria-hidden="true"></i>&nbsp;&nbsp;Site Bookmarker</h3>
         </header>
         <section id="infoentry">
-            <h1>Bookmark A Site</h1>
+            <h1>Bookmark</h1>
             <form id="submitform">
                 <!-- <label for="sitename">Site Name</label> -->
                 <input type="text" name="sitename" id="sitename" placeholder="Site Name">
